--- a/src/MicroservicesTask/Microservices/Microservices.csproj
+++ b/src/MicroservicesTask/Microservices/Microservices.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <LangVersion>9</LangVersion>
         <WarningLevel>0</WarningLevel>
+	    <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
